--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -12,7 +12,7 @@
             [formControl]="forgotPasswordForm.controls['email_or_phone']">
 
         <div *ngIf="forgotPasswordForm.controls['email_or_phone'].hasError('required') && forgotPasswordForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'forgot.password.form.email.or.phone.validation.required' | translate}}</div>
-        <div *ngFor="let error of apiErrors.errorsFor('email_or_phone')" class="alert alert-danger">{{error.detail}}</div>
+        <api-errors [errors]="apiErrors" attribute="email_or_phone"></api-errors>
       </div>
       <div class="form-group forgot-password-form-button-container">
         <div *ngIf="displayErrorMessage" class="error-message fs-m0">{{'forgot.password.submit.error' | translate}}</div>
