--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -15,7 +15,7 @@
         </autocomplete-dropdown>
         <p class="profile-form-input-description-text">{{'user.profile.form.default.language.description' | translate}}</p>
         <div *ngIf="!profileForm.value.default_language" class="alert alert-danger">{{'user.profile.form.default.language.required' | translate}}</div>
-        <div *ngFor="let error of apiErrors.errorsFor('language')" class="alert alert-danger">{{error.detail}}</div>
+        <api-errors [errors]="apiErrors" attribute="language"></api-errors>
       </div>
 
       <div class="profile-form-input-container">
@@ -40,7 +40,7 @@
             [lookupType]="'list'" [enumList]="countries">
         </autocomplete-dropdown>
         <div *ngIf="profileForm.controls['country_of_origin'].hasError('required')" class="alert alert-danger">{{'user.profile.form.country.validation.required' | translate}}</div>
-        <div *ngFor="let error of apiErrors.errorsFor('country_of_origin')" class="alert alert-danger">{{error.detail}}</div>
+        <api-errors [errors]="apiErrors" attribute="country_of_origin"></api-errors>
       </div>
 
       <div class="profile-form-input-container">
@@ -57,7 +57,7 @@
             {{status.name}}</label>
           </div>
         </div>
-        <div *ngFor="let error of apiErrors.errorsFor('current_status')" class="alert alert-danger">{{error.detail}}</div>
+        <api-errors [errors]="apiErrors" attribute="current_status"></api-errors>
       </div>
 
       <div *ngIf="profileForm.value.current_status === 'asylum_seeker'" class="profile-form-input-container">
@@ -84,7 +84,7 @@
             {{'common.no' | translate}}</label>
           </div>
         </div>
-        <div *ngFor="let error of apiErrors.errorsFor('at_und')" class="alert alert-danger">{{error.detail}}</div>
+        <api-errors [errors]="apiErrors" attribute="at_und"></api-errors>
       </div>
 
       <div *ngIf="profileForm.value.current_status === 'asylum_seeker' && profileForm.value.at_und === 'yes'" class="profile-form-input-container">
@@ -141,7 +141,7 @@
             (keypress)="isAllowedSSNChar($event.charCode)"
             placeholder="{{'user.profile.form.ssn.placeholder' | translate}}"
             [formControl]="profileForm.controls['ssn']">
-        <div *ngFor="let error of apiErrors.errorsFor('ssn')" class="alert alert-danger">{{error.detail}}</div>
+        <api-errors [errors]="apiErrors" attribute="ssn"></api-errors>
       </div>
 
       <div *ngIf="profileForm.value.current_status === 'asylum_seeker' && profileForm.value.at_und === 'yes'" class="profile-form-upload-image-container">
@@ -346,7 +346,7 @@
             autosize type="text"
             placeholder="{{'user.profile.form.general.skills.placeholder' | translate}}"
             [formControl]="profileForm.controls['competence_text']"></textarea>
-        <div *ngFor="let error of apiErrors.errorsFor('competence_text')" class="alert alert-danger">{{error.detail}}</div>
+        <api-errors [errors]="apiErrors" attribute="competence_text"></api-errors>
       </div>
 
       <div class="profile-form-input-container">
@@ -358,7 +358,7 @@
             autosize type="text"
             placeholder="{{'user.profile.form.work.experience.placeholder' | translate}}"
             [formControl]="profileForm.controls['job_experience']"></textarea>
-        <div *ngFor="let error of apiErrors.errorsFor('job_experience')" class="alert alert-danger">{{error.detail}}</div>
+        <api-errors [errors]="apiErrors" attribute="job_experience"></api-errors>
       </div>
 
       <div class="profile-form-input-container">
