--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,44 +1,93 @@
-<div class="contact-container">
+<div class="sub-header-container">
+  <h3 class="sub-header-title">{{"contact.title" | translate}}</h3>
+</div>
 
-  <div class="sub-header-container">
-    <h3 class="sub-header-title">{{"contact.title" | translate}}</h3>
-  </div>
+<div class="ui centered grid">
+  <div class="fourteen wide phone ten wide tablet eight wide computer column">
 
-  <div class="contact-form-container">
-    <div class="contact-form-description">
-      {{"contact.form.description" | translate}}<br>
-      {{"contact.form.instruction" | translate}}
+    <div class="contact-form-container">
+      <div class="contact-form-description">
+        {{"contact.form.description" | translate}}<br>
+        {{"contact.form.instruction" | translate}}
+      </div>
+
+      <div class="contact-form-icon-container">
+        <i class="contact-form-icon fa fa-envelope fa-5x"></i>
+      </div>
+
+      <form class="ui form" [formGroup]="contactForm" (ngSubmit)="submitForm(contactForm.value)">
+        <sm-loader [complete]="!loadingSubmit" class="inverted" text="{{'component.loading' | translate}}"></sm-loader>
+
+        <div class="field" [ngClass]="{'error': (contactForm.controls['name'].touched && !contactForm.controls['name'].valid) || apiErrors.hasErrorsFor('name')}">
+          <sm-input
+            [control]="contactForm.controls['name']"
+            [label]="('contact.form.name.header' | translate) + ' *'"
+            [placeholder]="'contact.form.name.placeholder' | translate"
+            class="left"
+            icon="user"
+            type="text">
+          </sm-input>
+          <div
+            *ngIf="contactForm.controls['name'].touched && contactForm.controls['name'].hasError('required')"
+            class="ui pointing red basic label">
+            {{'contact.form.name.validation.required' | translate}}
+          </div>
+          <div
+            *ngIf="contactForm.controls['name'].hasError('minlength')"
+            class="ui pointing red basic label">
+            {{'contact.form.name.validation.length' | translate}}
+          </div>
+          <api-errors [errors]="apiErrors" attribute="name"></api-errors>
+        </div>
+
+        <div class="field" [ngClass]="{'error': (contactForm.controls['email'].touched && !contactForm.controls['email'].valid) || apiErrors.hasErrorsFor('email')}">
+          <sm-input
+            [control]="contactForm.controls['email']"
+            [label]="('contact.form.email.header' | translate) + ' *'"
+            [placeholder]="'contact.form.email.placeholder' | translate"
+            class="left"
+            icon="mail"
+            type="text">
+          </sm-input>
+          <div
+            *ngIf="contactForm.controls['email'].touched && contactForm.controls['email'].hasError('required')"
+            class="ui pointing red basic label">
+            {{'contact.form.email.validation.required' | translate}}
+          </div>
+          <div
+            *ngIf="contactForm.controls['email'].hasError('minlength')"
+            class="ui pointing red basic label">
+            {{'contact.form.email.validation.length' | translate}}
+          </div>
+          <api-errors [errors]="apiErrors" attribute="email"></api-errors>
+        </div>
+
+        <div class="field" [ngClass]="{'error': (contactForm.controls['message'].touched && !contactForm.controls['message'].valid) || apiErrors.hasErrorsFor('body')}">
+          <sm-textarea
+            [control]="contactForm.controls['message']"
+            [label]="('contact.form.message.placeholder' | translate) + ' *'"
+            class="left"
+            icon="mail">
+          </sm-textarea>
+          <div
+            *ngIf="contactForm.controls['message'].touched && contactForm.controls['message'].hasError('required')"
+            class="ui pointing red basic label">
+            {{'contact.form.message.validation.required' | translate}}
+          </div>
+          <div
+            *ngIf="contactForm.controls['message'].hasError('minlength')"
+            class="ui pointing red basic label">
+            {{'contact.form.message.validation.length' | translate}}
+          </div>
+          <api-errors [errors]="apiErrors" attribute="body"></api-errors>
+        </div>
+
+        <div class="contact-button-container">
+          <loading *ngIf="loadingSubmit"></loading>
+          <button *ngIf="!loadingSubmit" type="submit" [disabled]="!contactForm.valid" class="btn-primary btn-medium btn contact-button">{{'contact.form.submit.button' | translate}}</button>
+        </div>
+      </form>
     </div>
 
-    <div class="contact-form-icon-container">
-      <i class="contact-form-icon fa fa-envelope fa-5x"></i>
-    </div>
-
-    <form [formGroup]="contactForm" (ngSubmit)="submitForm(contactForm.value)">
-      <div class="form-group material-group contact-form-input-container" [ngClass]="{'has-error':!contactForm.controls['name'].valid && contactForm.controls['name'].touched}">
-        <input class="form-control material-input contact-form-text-input" maxlength="101" type="text" placeholder="{{'contact.form.name.placeholder' | translate}}" [formControl]="contactForm.controls['name']">
-
-        <div *ngIf="contactForm.controls['name'].hasError('required') && contactForm.controls['name'].touched" class="alert alert-danger">{{'contact.form.name.validation.required' | translate}}</div>
-        <div *ngIf="contactForm.controls['name'].hasError('minlength') && contactForm.controls['name'].touched" class="alert alert-danger">{{'contact.form.name.validation.length' | translate}}</div>
-        <api-errors [errors]="apiErrors" attribute="name"></api-errors>
-      </div>
-      <div class="form-group material-group contact-form-input-container" [ngClass]="{'has-error':!contactForm.controls['email'].valid && contactForm.controls['email'].touched}">
-        <input class="form-control material-input contact-form-text-input" maxlength="256" type="email" placeholder="{{'contact.form.email.placeholder' | translate}}" [formControl]="contactForm.controls['email']">
-
-        <div *ngIf="contactForm.controls['email'].hasError('required') && contactForm.controls['email'].touched" class="alert alert-danger">{{'contact.form.email.validation.required' | translate}}</div>
-        <div *ngIf="contactForm.controls['email'].hasError('minlength') && contactForm.controls['email'].touched" class="alert alert-danger">{{'contact.form.email.validation.length' | translate}}</div>        <api-errors [errors]="apiErrors" attribute="email"></api-errors>
-      </div>
-      <div class="form-group material-group contact-form-input-container" [ngClass]="{'has-error':!contactForm.controls['message'].valid && contactForm.controls['message'].touched}">
-        <textarea class="form-control material-input" maxlength="1000" autosize type="text" placeholder="{{'contact.form.message.placeholder' | translate}}" [formControl]="contactForm.controls['message']"></textarea>
-
-        <div *ngIf="contactForm.controls['message'].hasError('required') && contactForm.controls['message'].touched" class="alert alert-danger">{{'contact.form.message.validation.required' | translate}}</div>
-        <div *ngIf="contactForm.controls['message'].hasError('minlength') && contactForm.controls['message'].touched" class="alert alert-danger">{{'contact.form.message.validation.length' | translate}}</div>        <api-errors [errors]="apiErrors" attribute="body"></api-errors>
-      </div>
-      <div class="contact-button-container">
-        <loading *ngIf="loadingSubmit"></loading>
-        <button *ngIf="!loadingSubmit" type="submit" [disabled]="!contactForm.valid" class="btn-primary btn-medium btn contact-button">{{'contact.form.submit.button' | translate}}</button>
-      </div>
-    </form>
   </div>
-
 </div>
