--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -171,4 +171,9 @@
       </div>
     </div>
   </div>
+  <div class="ui centered grid">
+    <div class="fourteen wide phone ten wide tablet eight wide computer column">
+      <contact-form></contact-form>
+    </div>
+  </div>
 </div>
