Refactor user-register.component to user input-errors.component

--- a/src/app/components/forms/contact-form.component.html
+++ b/src/app/components/forms/contact-form.component.html
@@ -42,6 +42,6 @@
 
   <div class="contact-button-container">
     <loading *ngIf="loadingSubmit"></loading>
-    <button *ngIf="!loadingSubmit" type="submit" class="btn-primary btn-medium btn contact-button">{{'contact.form.submit.button' | translate}}</button>
+    <button *ngIf="!loadingSubmit" [disabled]="!contactForm.valid" type="submit" class="btn-primary btn-medium btn contact-button">{{'contact.form.submit.button' | translate}}</button>
   </div>
 </form>
